--- a/client/package.json
+++ b/client/package.json
@@ -22,10 +22,12 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@auth0/angular-jwt": "^2.1.0",
+    "@types/moment": "^2.13.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "husky": "^2.1.0",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
