--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
     "@auth0/angular-jwt": "^2.1.0",
+    "@types/lodash": "^4.14.138",
     "@types/moment": "^2.13.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
