--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~8.0.3",
     "@angular/compiler": "~8.0.3",
     "@angular/core": "~8.0.3",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.0.3",
     "@angular/material": "^8.0.1",
     "@angular/platform-browser": "~8.0.3",
@@ -25,6 +26,7 @@
     "@types/lodash": "^4.14.138",
     "@types/moment": "^2.13.0",
     "core-js": "^2.5.4",
+    "firebase": "^7.1.0",
     "hammerjs": "^2.0.8",
     "husky": "^2.1.0",
     "lodash": "^4.17.11",
