--- a/settings.json
+++ b/settings.json
@@ -14,6 +14,6 @@
     "PROTOCOL": {
         "LOCAL_DOCKER": "http",
         "PRODUCTION_EXTERNAL": "https",
-        "PRODUCTION": "http"
+        "PRODUCTION": "https"
     }
 }
